--- a/style.css
+++ b/style.css
@@ -352,7 +352,6 @@ body {
     z-index: 1;
     opacity: 0;
     transition: all 0.5s;
-    display: none;
   }
   .navbar .navbar-nav.slide {
     opacity: 1;
@@ -460,6 +459,6 @@ body {
     padding-right: 0;
   }
   .copyright {
-    display: inline;
+    margin-top: 100px;
   }
 }
